change-compra-html

--- a/compra/compra.html
+++ b/compra/compra.html
@@ -37,7 +37,7 @@
 
                 <!-- Mega menú "Hombre" -->
                 <li class="nav-item dropdown position-relative">
-                <a href="./hombre.html" class="nav-link">Hombre</a>
+                <a href="../categorias/hombre/hombre.html" class="nav-link">Hombre</a>
                     <div class="dropdown-menu mega-menu p-4">
                         <div class="row">
                             <div class="col-md-3">
