--- a/compra/compra.html
+++ b/compra/compra.html
@@ -23,8 +23,8 @@
         <!-- Logo -->
         <div class="col-md-3 d-flex align-items-center">
             <div class="logo-text d-flex align-items-center">
-            <a href="./index.html" class="text-strivo">
-                <img src="./image/logo.png" width="70px" height="70px" alt="logo">
+            <a href="../index.html" class="text-strivo">
+                <img src="../image/logo.png" width="70px" height="70px" alt="logo">
                 <span class="align-items-center">TRIVO</span></a>
             </div>                        
         </div>
@@ -82,7 +82,7 @@
                 </li>
 
                 <li class="nav-item dropdown position-relative">
-                <a href="#" class="nav-link">Mujer</a>
+                <a href="../categorias/mujer/mujer.html" class="nav-link">Mujer</a>
                     <div class="dropdown-menu mega-menu p-4">
                         <div class="row">
                             <div class="col-md-3">
@@ -331,8 +331,8 @@
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item tags-shopping"><a href="./index.html">Inicio</a></li>
-                    <li class="breadcrumb-item tags-shopping"><a href="./hombre.html">Hombre</a></li>
-                    <li class="breadcrumb-item tags-shopping"><a href="./hombre.html">Ropa</a></li>
+                    <li class="breadcrumb-item tags-shopping"><a href="../categorias/hombre/hombre.html">Hombre</a></li>
+                    <li class="breadcrumb-item tags-shopping"><a href="../compra/compra.html">Ropa</a></li>
                     <li class="breadcrumb-item active tags-shopping"> <u>Sudaderas</u> </li>
                 </ol>
             </nav>
@@ -344,25 +344,25 @@
                 <!-- Thumbnails -->
                 <div class="col-md-1">
                     <div class="thumbnail-container">
-                        <img src="./image/chaqueta.jpg" 
+                        <img src="../image/chaqueta2.png" 
                             class="thumbnail-img active" 
-                            data-main="./image/chaqueta.jpg" 
+                            data-main="../image/chaqueta2.png" 
                             alt="Chaqueta negra">
-                        <img src="./image/Camiseta1.jpg" 
+                        <img src="../image/chaqueta1.png" 
                             class="thumbnail-img" 
-                            data-main="./image/Camiseta1.jpg" 
+                            data-main="../image/chaqueta1.png" 
                             alt="Chaqueta verde">
-                        <img src="./image/conjunto.jpg" 
+                        <img src="../image/chaqueta3.png" 
                             class="thumbnail-img" 
-                            data-main="./image/conjunto.jpg" 
+                            data-main="../image/chaqueta3.png" 
                             alt="Chaqueta deportiva">
-                        <img src="./image/medias.jpg" 
+                        <img src="../image/chaqueta4.png" 
                             class="thumbnail-img" 
-                            data-main="./image/medias.jpg" 
+                            data-main="../image/chaqueta4.png" 
                             alt="Detalle chaqueta">
-                        <img src="./image/Zapatos1.jpg" 
+                        <img src="../image/chaqueta5.png" 
                             class="thumbnail-img" 
-                            data-main="./image/Zapatos1.jpg" 
+                            data-main="../image/chaqueta5.png" 
                             alt="Detalle chaqueta">
                     </div>
                 </div>
@@ -371,7 +371,7 @@
                 <div class="col-md-5">
                     <div class="main-image-container">
                         <img id="mainImage" 
-                            src="./image/chaqueta.jpg" 
+                            src="../image/chaqueta2.png" 
                             class="main-image" 
                             alt="Chaqueta principal">
                     </div>
@@ -470,11 +470,11 @@
                     <div class="mb-4">
                         <h5 class="selection-title">Selecciona el color</h5>
                         <div class="color-options">
-                            <div class="color-option active" data-color="negro" data-image="./image/conjunto.jpg">
-                                <img src="./image/conjunto.jpg" alt="Negro">
+                            <div class="color-option active" data-color="negro" data-image="../image/chaqueta3.png">
+                                <img src="../image/chaqueta3.png" alt="Negro">
                             </div>
-                            <div class="color-option" data-color="verde" data-image="./image/Camiseta1.jpg">
-                                <img src="./image/Camiseta1.jpg" alt="Verde">
+                            <div class="color-option" data-color="verde" data-image="../image/chaqueta1.png">
+                                <img src="../image/chaqueta1.png" alt="Morado">
                             </div>
                         </div>
                     </div>
