--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </li>
 
             <li class="nav-item dropdown position-relative">
-              <a href="#" class="nav-link">Mujer</a>
+              <a href="./categorias/mujer/mujer.html" class="nav-link">Mujer</a>
                 <div class="dropdown-menu mega-menu p-4">
                     <div class="row">
                         <div class="col-md-3">
@@ -413,12 +413,12 @@
                 <!-- Producto 1 -->
                 <div class="col-6 col-md-3">
                     <div class="card product-card h-100">
-                        <img src="./image/Zapatos1.jpg" class="card-img-top" alt="Zapatillas deportivas">
+                        <img src="./image/zapatos2.jpg" class="card-img-top" alt="Zapatillas deportivas">
                         <div class="card-body">
-                            <h5 class="card-title">Zapatillas Running Pro</h5>
-                            <p class="card-text text-muted">Calzado / Hombre</p>
+                            <h5 class="card-title">Zapatos deportivos rojos - Mujer adidas</h5>
+                            <p class="card-text text-muted">Calzado / Mujer</p>
                             <div class="d-flex justify-content-between align-items-center">
-                                <span class="price">$289.900 COP</span>
+                                <span class="price">$279.990 COP</span>
                                 <button class="btn btn-sm btn-outline-dark" data-bs-toggle="modal" data-bs-target="#productModal">Ver detalles</button>
                             </div>
                         </div>
@@ -428,12 +428,12 @@
                 <!-- Producto 2 -->
                 <div class="col-6 col-md-3">
                     <div class="card product-card h-100">
-                        <img src="./image/Camiseta1.jpg" class="card-img-top" alt="Camiseta deportiva">
+                        <img src="./image/chaqueta.jpg" class="card-img-top" alt="Camiseta deportiva">
                         <div class="card-body">
-                            <h5 class="card-title">Camiseta DryFit</h5>
-                            <p class="card-text text-muted">Ropa / hombre</p>
+                            <h5 class="card-title">Chaqueta de tejido Woven - Mujer adidas</h5>
+                            <p class="card-text text-muted">Ropa / Mujer</p>
                             <div class="d-flex justify-content-between align-items-center">
-                                <span class="price">$79.900 COP</span>
+                                <span class="price">$495.990 COP</span>
                                 <button class="btn btn-sm btn-outline-dark" data-bs-toggle="modal" data-bs-target="#productModal">Ver detalles</button>
                             </div>
                         </div>
@@ -443,12 +443,12 @@
                 <!-- Producto 3 -->
                 <div class="col-6 col-md-3">
                     <div class="card product-card h-100">
-                        <img src="https://images.unsplash.com/photo-1539185441755-769473a23570" class="card-img-top" alt="Pantalón deportivo">
+                        <img src="./image/gorra.jpg" class="card-img-top" alt="Pantalón deportivo">
                         <div class="card-body">
-                            <h5 class="card-title">Leggins Performance</h5>
-                            <p class="card-text text-muted">Ropa mujer</p>
+                            <h5 class="card-title">Gorra deportiva ajustable Chicago</h5>
+                            <p class="card-text text-muted">Accesorios</p>
                             <div class="d-flex justify-content-between align-items-center">
-                                <span class="price">$124.900 COP</span>
+                                <span class="price">$59.990 COP</span>
                                 <button class="btn btn-sm btn-outline-dark" data-bs-toggle="modal" data-bs-target="#productModal">Ver detalles</button>
                             </div>
                         </div>
@@ -457,13 +457,13 @@
                 
                 <!-- Producto 4 -->
                 <div class="col-6 col-md-3">
-                    <div class="card product-card h-100">
-                        <img src="https://images.unsplash.com/photo-1591491680738-bf6e9f73fbc2" class="card-img-top" alt="Mochila deportiva">
+                    <div class="card product-card h-100 ">
+                        <img src="./image/pelotas_tenis.jpeg" class="card-img-top" alt="Mochila deportiva">
                         <div class="card-body">
-                            <h5 class="card-title">Mochila Trail 25L</h5>
+                            <h5 class="card-title">Pelotas de tennis paquete x3 unidades</h5>
                             <p class="card-text text-muted">Accesorios</p>
                             <div class="d-flex justify-content-between align-items-center">
-                                <span class="price">$159.900 COP</span>
+                                <span class="price">$34.990 COP</span>
                                 <button class="btn btn-sm btn-outline-dark" data-bs-toggle="modal" data-bs-target="#productModal">Ver detalles</button>
                             </div>
                         </div>
@@ -476,12 +476,12 @@
                 <!-- Producto 5 -->
                 <div class="col-6 col-md-3 mb-4">
                     <div class="card product-card h-100">
-                        <img src="https://images.unsplash.com/photo-1588286840104-8957b019727f" class="card-img-top" alt="Balón de fútbol">
+                        <img src="./image/guayos.jpg" class="card-img-top" alt="Balón de fútbol">
                         <div class="card-body">
-                            <h5 class="card-title">Balón Fútbol Oficial</h5>
-                            <p class="card-text text-muted">Equipamiento</p>
+                            <h5 class="card-title">Guayos de futbol</h5>
+                            <p class="card-text text-muted">Calzado / Hombre</p>
                             <div class="d-flex justify-content-between align-items-center">
-                                <span class="price">$119.900 COP</span>
+                                <span class="price">$179.990 COP</span>
                                 <button class="btn btn-sm btn-outline-dark" data-bs-toggle="modal" data-bs-target="#productModal">Ver detalles</button>
                             </div>
                         </div>
@@ -491,12 +491,12 @@
                 <!-- Producto 6 -->
                 <div class="col-6 col-md-3 mb-4">
                     <div class="card product-card h-100">
-                        <img src="https://images.unsplash.com/photo-1581344946641-55a0c7c31250" class="card-img-top" alt="Raqueta de tenis">
+                        <img src="./image/raqueta.jpg" class="card-img-top" alt="Raqueta de tenis">
                         <div class="card-body">
                             <h5 class="card-title">Raqueta Tenis Pro</h5>
-                            <p class="card-text text-muted">Equipamiento</p>
+                            <p class="card-text text-muted">Accesorios</p>
                             <div class="d-flex justify-content-between align-items-center">
-                                <span class="price">$349.900 COP</span>
+                                <span class="price">$349.990 COP</span>
                                 <button class="btn btn-sm btn-outline-dark" data-bs-toggle="modal" data-bs-target="#productModal">Ver detalles</button>
                             </div>
                         </div>
@@ -506,12 +506,12 @@
                 <!-- Producto 7 -->
                 <div class="col-6 col-md-3 mb-4">
                     <div class="card product-card h-100">
-                        <img src="https://images.unsplash.com/photo-1563089145-599997674d42" class="card-img-top" alt="Botella deportiva">
+                        <img src="./image/pantalones.jpg" class="card-img-top" alt="Botella deportiva">
                         <div class="card-body">
-                            <h5 class="card-title">Botella Térmica 750ml</h5>
-                            <p class="card-text text-muted">Accesorios</p>
+                            <h5 class="card-title">Pantalones ajustables</h5>
+                            <p class="card-text text-muted">Ropa / Hombre</p>
                             <div class="d-flex justify-content-between align-items-center">
-                                <span class="price">$59.900 COP</span>
+                                <span class="price">$159.990 COP</span>
                                 <button class="btn btn-sm btn-outline-dark" data-bs-toggle="modal" data-bs-target="#productModal">Ver detalles</button>
                             </div>
                         </div>
@@ -521,12 +521,12 @@
                 <!-- Producto 8 -->
                 <div class="col-6 col-md-3 mb-4">
                     <div class="card product-card h-100">
-                        <img src="https://images.unsplash.com/photo-1515468381879-40d0303232b5" class="card-img-top" alt="Chaqueta deportiva">
+                        <img src="./image/medias.jpg" class="card-img-top" alt="Chaqueta deportiva">
                         <div class="card-body">
-                            <h5 class="card-title">Chaqueta Cortavientos</h5>
-                            <p class="card-text text-muted">Ropa hombre</p>
+                            <h5 class="card-title">Medias de algodon</h5>
+                            <p class="card-text text-muted">Ropa / Hombre</p>
                             <div class="d-flex justify-content-between align-items-center">
-                                <span class="price">$199.900 COP</span>
+                                <span class="price">$99.990 COP</span>
                                 <button class="btn btn-sm btn-outline-dark" data-bs-toggle="modal" data-bs-target="#productModal">Ver detalles</button>
                             </div>
                         </div>
@@ -539,12 +539,12 @@
                 <!-- Producto 9 -->
                 <div class="col-6 col-md-3 mb-4">
                     <div class="card product-card h-100">
-                        <img src="https://images.unsplash.com/photo-1608667508764-33cf0726b13a" class="card-img-top" alt="Reloj deportivo">
+                        <img src="./image/pelotas_tenis.jpeg" class="card-img-top" alt="Mochila deportiva">
                         <div class="card-body">
-                            <h5 class="card-title">Smartwatch Sport GPS</h5>
-                            <p class="card-text text-muted">Tecnología</p>
+                            <h5 class="card-title">Pelotas de tennis paquete x3 unidades</h5>
+                            <p class="card-text text-muted">Accesorios</p>
                             <div class="d-flex justify-content-between align-items-center">
-                                <span class="price">$529.900 COP</span>
+                                <span class="price">$34.990 COP</span>
                                 <button class="btn btn-sm btn-outline-dark" data-bs-toggle="modal" data-bs-target="#productModal">Ver detalles</button>
                             </div>
                         </div>
@@ -554,12 +554,12 @@
                 <!-- Producto 10 -->
                 <div class="col-6 col-md-3 mb-4">
                     <div class="card product-card h-100">
-                        <img src="https://images.unsplash.com/photo-1562183241-b937e95585b6" class="card-img-top" alt="Shorts deportivos">
+                        <img src="./image/chaqueta.jpg" class="card-img-top" alt="Zapatillas deportivas">
                         <div class="card-body">
-                            <h5 class="card-title">Shorts Training</h5>
-                            <p class="card-text text-muted">Ropa hombre</p>
+                            <h5 class="card-title">Chaqueta de tejido Woven - Mujer adidas</h5>
+                            <p class="card-text text-muted">Calzado / Mujer</p>
                             <div class="d-flex justify-content-between align-items-center">
-                                <span class="price">$89.900 COP</span>
+                                <span class="price">$279.990 COP</span>
                                 <button class="btn btn-sm btn-outline-dark" data-bs-toggle="modal" data-bs-target="#productModal">Ver detalles</button>
                             </div>
                         </div>
@@ -569,12 +569,12 @@
                 <!-- Producto 11 -->
                 <div class="col-6 col-md-3 mb-4">
                     <div class="card product-card h-100">
-                        <img src="https://images.unsplash.com/photo-1610723284656-dc9880173ce8" class="card-img-top" alt="Top deportivo">
+                        <img src="./image/guayos.jpg" class="card-img-top" alt="Balón de fútbol">
                         <div class="card-body">
-                            <h5 class="card-title">Top Impact Medium</h5>
-                            <p class="card-text text-muted">Ropa mujer</p>
+                            <h5 class="card-title">Guayos de futbol</h5>
+                            <p class="card-text text-muted">Calzado / Hombre</p>
                             <div class="d-flex justify-content-between align-items-center">
-                                <span class="price">$94.900 COP</span>
+                                <span class="price">$179.990 COP</span>
                                 <button class="btn btn-sm btn-outline-dark" data-bs-toggle="modal" data-bs-target="#productModal">Ver detalles</button>
                             </div>
                         </div>
@@ -584,10 +584,10 @@
                 <!-- Producto 12 -->
                 <div class="col-6 col-md-3 mb-4">
                     <div class="card product-card h-100">
-                        <img src="https://images.unsplash.com/photo-1551028719-00167b16eac5" class="card-img-top" alt="Mancuernas">
+                        <img src="./image/Camiseta1.jpg" class="card-img-top" alt="Mancuernas">
                         <div class="card-body">
-                            <h5 class="card-title">Set Mancuernas 10kg</h5>
-                            <p class="card-text text-muted">Entrenamiento</p>
+                            <h5 class="card-title">Camiseta deportiva de compresión</h5>
+                            <p class="card-text text-muted">Ropa / Hombre</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <span class="price">$259.900 COP</span>
                                 <button class="btn btn-sm btn-outline-dark" data-bs-toggle="modal" data-bs-target="#productModal">Ver detalles</button>
