--- a/carrito/shopping.html
+++ b/carrito/shopping.html
@@ -340,13 +340,13 @@
                         <div class="cart-item mb-4" data-id="1">
                             <div class="row align-items-center">
                                 <div class="col-md-3">
-                                    <img src="https://via.placeholder.com/150x150/D2B48C/8B4513?text=Tenis" class="img-fluid rounded" alt="Tenis Courtblock Bold">
+                                    <img src="../image/zapatos2.jpg" class="img-fluid rounded" alt="Tenis Courtblock Bold">
                                 </div>
                                 <div class="col-md-6">
                                     <h6 class="mb-1">Tenis Courtblock Bold - Mujer Sportwear</h6>
                                     <p class="text-muted mb-1">Color: Rosa palo</p>
                                     <p class="text-muted mb-2">Talla: S</p>
-                                    <p class="price mb-0 fw-bold text-danger">$ 279.999</p>
+                                    <p class="price mb-0 fw-bold text-danger">$ 279.990</p>
                                 </div>
                                 <div class="col-md-3">
                                     <div class="d-flex align-items-center justify-content-between">
@@ -373,13 +373,13 @@
                         <div class="cart-item mb-4" data-id="2">
                             <div class="row align-items-center">
                                 <div class="col-md-3">
-                                    <img src="https://via.placeholder.com/150x150/CD5C5C/8B0000?text=Chaqueta" class="img-fluid rounded" alt="Chaqueta de tejido Woven">
+                                    <img src="../image/chaqueta.jpg" class="img-fluid rounded" alt="Chaqueta de tejido Woven">
                                 </div>
                                 <div class="col-md-6">
                                     <h6 class="mb-1">Chaqueta de tejido Woven - Mujer adidas</h6>
                                     <p class="text-muted mb-1">Color: rojo</p>
                                     <p class="text-muted mb-2">Talla: XL</p>
-                                    <p class="price mb-0 fw-bold text-danger">$ 495.999</p>
+                                    <p class="price mb-0 fw-bold text-danger">$ 495.990</p>
                                 </div>
                                 <div class="col-md-3">
                                     <div class="d-flex align-items-center justify-content-between">
