--- a/categorias/hombre/hombre.html
+++ b/categorias/hombre/hombre.html
@@ -24,7 +24,7 @@
         <div class="col-md-3 d-flex align-items-center">
         <div class="logo-text d-flex align-items-center">
           <a href="./index.html" class="text-strivo">
-            <img src="./image/logo.png" width="70px" height="70px" alt="logo">
+            <img src="../../image/logo.png" width="70px" height="70px" alt="logo">
             <span class="align-items-center">TRIVO</span></a>
         </div>                        
         </div>
@@ -82,7 +82,7 @@
               </li>
 
               <li class="nav-item dropdown position-relative">
-                <a href="#" class="nav-link">Mujer</a>
+                <a href="../mujer/mujer.html" class="nav-link">Mujer</a>
                   <div class="dropdown-menu mega-menu p-4">
                       <div class="row">
                           <div class="col-md-3">
@@ -291,7 +291,7 @@
             </a>
             
             <!-- Botón de carrito -->
-            <a href="hombre.html" class="btn btn-link text-dark position-relative">
+            <a href="../../carrito/shopping.html" class="btn btn-link text-dark position-relative">
               <i class="fas fa-shopping-bag"></i>
               <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
                 0
@@ -343,10 +343,10 @@
                         <div class="filter-options accordion-item">
                             <h3 class="accordion-header" id="headingCategoria">
                                 <button class="accordion-button" type="button" 
-                                        data-bs-toggle="collapse" 
-                                        data-bs-target="#categoriaCollapse" 
-                                        aria-expanded="true" 
-                                        aria-controls="categoriaCollapse">
+                                    data-bs-toggle="collapse" 
+                                    data-bs-target="#categoriaCollapse" 
+                                    aria-expanded="true" 
+                                    aria-controls="categoriaCollapse">
                                     Categoria
                                 </button>
                             </h3>
@@ -440,10 +440,10 @@
                         <div class="filter-options accordion-item">
                             <h3 class="accordion-header" id="headingMarca">
                                 <button class="accordion-button collapsed" type="button" 
-                                        data-bs-toggle="collapse" 
-                                        data-bs-target="#marcaCollapse" 
-                                        aria-expanded="false" 
-                                        aria-controls="marcaCollapse">
+                                    data-bs-toggle="collapse" 
+                                    data-bs-target="#marcaCollapse" 
+                                    aria-expanded="false" 
+                                    aria-controls="marcaCollapse">
                                     Marca
                                 </button>
                             </h3>
@@ -510,7 +510,7 @@
                 </div>
 
                 <div class="row products-container" id="products-grid">
-                    <!-- Los productos se cargarán dinámicamente con JavaScript -->
+                    <!--  Productos cargados con JavaScript -->
                 </div>
 
                 <div class="pagination-controls d-flex justify-content-between align-items-center mt-4 mb-5">
